correção-do-link

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,13 @@
 <body>
     <script type="text/javascript">
         var apikey = {
-            key: 'SUA API KEY VEM AQUI :)'
+            key: ''
         }
-    fetch('https://pro.coinmarketcap.com/v1/cryptocurrency/map?CMC_PRO_API_KEY=' +
+    fetch('https://pro-api.coinmarketcap.com/v1/cryptocurrency/map?CMC_PRO_API_KEY=' +
     apikey.key)
     .then((response) => {
         if(!response.ok) throw new Error('Erro ao executar a requisição, status ' + response.status);
+        return response.json();
     })
     .then((api) => {
         console.log(api);
